<resources>
    <string name="app_name">Practice Handwriting</string>
    <string name="English">English</string>
    <string name="Hindi">हिंदी</string>
    <string name="Arabic">العربية</string>
    <string-array name="English_characters">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
        <item>a</item>
        <item>b</item>
        <item>c</item>
        <item>d</item>
        <item>e</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>i</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>m</item>
        <item>n</item>
        <item>o</item>
        <item>p</item>
        <item>q</item>
        <item>r</item>
        <item>s</item>
        <item>t</item>
        <item>u</item>
        <item>v</item>
        <item>w</item>
        <item>x</item>
        <item>y</item>
        <item>z</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="Hindi_characters">
        <item>अ</item>
        <item>आ</item>
        <item>इ</item>
        <item>ई</item>
        <item>उ</item>
        <item>ऊ</item>
        <item>ऋ</item>
        <item>ए</item>
        <item>ऐ</item>
        <item>ओ</item>
        <item>औ</item>
        <item>क</item>
        <item>ख</item>
        <item>ग</item>
        <item>घ</item>
        <item>ङ</item>
        <item>च</item>
        <item>छ</item>
        <item>ज</item>
        <item>झ</item>
        <item>ञ</item>
        <item>ट</item>
        <item>ठ</item>
        <item>ड</item>
        <item>ढ</item>
        <item>ण</item>
        <item>त</item>
        <item>थ</item>
        <item>द</item>
        <item>ध</item>
        <item>न</item>
        <item>प</item>
        <item>फ</item>
        <item>ब</item>
        <item>भ</item>
        <item>म</item>
        <item>य</item>
        <item>र</item>
        <item>ल</item>
        <item>व</item>
        <item>श</item>
        <item>ष</item>
        <item>स</item>
        <item>ह</item>
        <item>०</item>
        <item>१</item>
        <item>२</item>
        <item>३</item>
        <item>४</item>
        <item>५</item>
        <item>६</item>
        <item>७</item>
        <item>८</item>
        <item>९</item>
    </string-array>
    <string-array name="Arabic_characters">
        <item>ا</item>
        <item>ب</item>
        <item>ت</item>
        <item>ث</item>
        <item>ج</item>
        <item>ح</item>
        <item>خ</item>
        <item>د</item>
        <item>ذ</item>
        <item>ر</item>
        <item>ز</item>
        <item>س</item>
        <item>ش</item>
        <item>ص</item>
        <item>ض</item>
        <item>ط</item>
        <item>ظ</item>
        <item>ع</item>
        <item>غ</item>
        <item>ق</item>
        <item>ف</item>
        <item>ك</item>
        <item>ل</item>
        <item>م</item>
        <item>ن</item>
        <item>ه</item>
        <item>و</item>
        <item>ي</item>
        <item>٠</item>
        <item>١</item>
        <item>٢</item>
        <item>٣</item>
        <item>٤</item>
        <item>٥</item>
        <item>٦</item>
        <item>٧</item>
        <item>٨</item>
        <item>٩</item>
    </string-array>
    <string name="time_trial">Time Trial</string>
    <string name="freehand">Freehand</string>
    <string name="characters">Characters</string>
    <string name="words">Words</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
</resources>