<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBg"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    tools:context="org.buildmlearn.practicehandwriting.LanguageActivity"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ActionbarBg"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/AppTheme.Toolbar.Title"
        app:navigationIcon="@drawable/ic_launcher"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.565"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.42"
        android:weightSum="2"
        android:gravity="center">
        <info.hoang8f.widget.FButton
            android:id="@+id/character_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            fbutton:buttonColor="@color/ButtonBg"
            android:textColor="@color/White"
            android:text="@string/characters"
            android:onClick="modeSelectionOnClick"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.565"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.42"
        android:weightSum="2"
        android:gravity="center">
        <info.hoang8f.widget.FButton
            android:id="@+id/word_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            fbutton:buttonColor="@color/ButtonBg"
            android:textColor="@color/White"
            android:text="@string/words"
            android:onClick="modeSelectionOnClick"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.565"/>
</LinearLayout>
