<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/AppBg"
    tools:context="org.buildmlearn.practicehandwriting.activities.MainMenuActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ActionbarBg"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/AppTheme.Toolbar.Title"
        app:navigationIcon="@drawable/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/character_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            android:onClick="mainMenuActivityOnClick">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/characters"
                android:layout_weight="0.7"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="30sp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/characters"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/word_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            android:onClick="mainMenuActivityOnClick">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/words"
                android:layout_weight="0.7"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="30sp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/words"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/timetrial_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:onClick="mainMenuActivityOnClick">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/timer"
                android:layout_weight="0.7"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="30sp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/time_trial"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/freehand_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:background="@drawable/rounded_bg"
            android:gravity="center"
            android:onClick="mainMenuActivityOnClick">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/writing"
                android:layout_weight="0.7"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="30sp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/freehand"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
