<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="org.buildmlearn.practicehandwriting.LanguageActivity"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ActionbarBg">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"/>
        </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.565"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.42"
        android:weightSum="2"
        android:gravity="center">
    <info.hoang8f.widget.FButton
        android:id="@+id/english_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        fbutton:buttonColor="@color/ButtonBg"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:text="@string/English"
        android:onClick="gotoMenu"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.565"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.42"
        android:weightSum="2"
        android:gravity="center">
        <info.hoang8f.widget.FButton
            android:id="@+id/hindi_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            fbutton:buttonColor="@color/ButtonBg"
            android:textColor="@color/White"
            android:text="@string/Hindi"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.565"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.42"
        android:weightSum="2"
        android:gravity="center">
        <info.hoang8f.widget.FButton
            android:id="@+id/arabic_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            fbutton:buttonColor="@color/ButtonBg"
            android:textColor="@color/White"
            android:text="@string/Arabic"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.565"/>
</LinearLayout>
